--- a/Base_Project.uvprojx
+++ b/Base_Project.uvprojx
@@ -442,6 +442,26 @@
               <FileType>1</FileType>
               <FilePath>.\Sources\led_driver.c</FilePath>
             </File>
+            <File>
+              <FileName>temp_functions.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Sources\temp_functions.c</FilePath>
+            </File>
+            <File>
+              <FileName>temp_functions.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Sources\temp_functions.h</FilePath>
+            </File>
+            <File>
+              <FileName>lcd_driver.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Sources\lcd_driver.c</FilePath>
+            </File>
+            <File>
+              <FileName>lcd_driver.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Sources\lcd_driver.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
